fixed body padding for mobile applications | instagram posts on mobile seem to be doing fine

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* Mobile */
 @media screen and (max-width: 991px) {
-  .bodywidth {
-    padding: 0;
+  body .bodywidth {
+    padding: 0rem;
   }
   p,
   li {
